--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,11 @@
               onclick="ConversationPanel.buttonSendMessage()"
             />
           </div>
+          <div class="copyright" id="copyright">
+            <span>
+              © 2019 - Desenvolvido por
+            </span>
+          </div>
           <div class="disclaimer"></div>
         </div>
       </div>
